make auth_service class and implement Google and GitHub sign in fucntion

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
   "workbench.colorCustomizations": {
     "titleBar.activeBackground": "#53944b",
     "titleBar.inactiveBackground": "#53944b"
-  }
+  },
+  "explorer.compactFolders": false
 }
